--- a/k8s-manifests/deployment.yaml
+++ b/k8s-manifests/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: back-app
-        image: raniakh/back-app
+        image: raniakh/base-back
         ports:
         - containerPort: 80
