--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+
   "name": "express-server",
   "version": "0.0.0",
   "private": true,
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "express": "~4.14.0",
-    "mongoose": "^4.7.0"
+    "mongoose": "^4.7.0",
+    "dotenv": ""
   }
 }
